--- a/vif-navigator2/res/values/colors.xml
+++ b/vif-navigator2/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="odd">#eee9cf</color>
     <color name="even">#eae3c0</color>
+    <color name="transparent">#0000</color>
 </resources>
