--- a/vif-navigator2/res/values/colors.xml
+++ b/vif-navigator2/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="odd">#eee9cf</color>
     <color name="even">#eae3c0</color>
     <color name="transparent">#0000</color>
+    <color name="gray">#d3d3d3</color>
 </resources>
